2011-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/bonito.c (write_bases): Fix direction of the shift.

2011-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/partmap/bsdlabel.c: Include grub/emu/misc.h and not grub/util/misc.h.
	(iterate_real): Don't rely on partition being non-NULL.

2011-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/argv.c (round_up_exp): unsigned is 32-bit on all
	supported platforms. Put a compile time assert for this rather than
	generate a warning with 32-bit shift.

2011-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/scsi.c (grub_scsi_read): Fix binary and check and make
	logical expression more readable.

2011-01-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/raid.c (insert_array): Ensure uniqueness of p->number
	even if some elements have a name.
	Reported by: Alexander GQ Gerasiov.

2011-01-22  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkconfig_lib.in (is_path_readable_by_grub): Consider a
	path unreadable if `grub-probe -t abstraction' fails, for example if
	memberlist fails on an LVM volume group.
	Reported by: Darius Jahandarie.

2011-01-22  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Simple configuration): Document
	GRUB_PRELOAD_MODULES.

2011-01-17  Colin Watson  <cjwatson@ubuntu.com>

	* .bzrignore: Remove nonexistent grub-pbkdf2.

2011-01-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Bump version to 1.99~rc1.

2011-01-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkimage.c (generate_image): Check fwstart.img checksum
	for safety.

2011-01-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/yeeloong/init.c (grub_machine_init): Init boot
	module.

2011-01-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (fwstart): Add lost LDFLAGS.

2011-01-13  Vladimir Serbinenko  <phcoder@gmail.com>
